Fix text-overflow
git-svn-id: https://subversion.renater.fr/esup-sifacmiss2/trunk@218 1ea0db98-6847-4a72-bad2-ce9059f6f1a9

--- a/esup-sifacmiss2-web-jsf-mixed/src/main/less/iphone/panels.less
+++ b/esup-sifacmiss2-web-jsf-mixed/src/main/less/iphone/panels.less
@@ -15,21 +15,21 @@
   
   & > .label,
   & > .value {
-  outline: thin solid;
     display: inline-block;
     line-height: 20px;
-    width: 50%;
   }
 
   & > .label {
     .text-overflow();
     text-align: left;
     font-weight: bold;
+    width: 55%;
   }
 
   & > .value {
     text-align: right;
     color: @panelValueColor;
+    width: 45%;
   }
 }
 
